--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Divyansh - Developer Portfolio">
     <meta property="og:description" content="Developer, Student, and Explorer from BITS Pilani">
-    <meta property="og:image" content="Screenshot 2025-07-29 at 2.14.31 PM.png">
+    <meta property="og:image" content="IMG_9377.HEIC">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta property="og:type" content="website">
     
