--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <!-- Developer Picture -->
                 <div class="devpic">
-                    <img src="Screenshot 2025-07-29 at 2.14.31 PM.png" 
+                    <img src="IMG_9377.HEIC" 
                          alt="Divyansh - A professional photo of the developer" 
                          loading="lazy"
                          width="400" 
