--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <nav>
                 <ul role="list">
                     <li><a href="/" aria-current="page">Home</a></li>
-                    <li><a href="/intro.html">My Intro</a></li>
+                    <li><a href="intro.html">My Intro</a></li>
                    
                    
-                    <li><a href="/blog.html">Blog</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </aside>
