--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/intro.html">My Intro</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="cv.html">CV</a></li>
+          <li><a href="intro.html">My Intro</a></li>
+         
+        
           <li><a href="blog.html">Blog</a></li>
         </ul>
       </nav>
