--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <!-- Call to Action Buttons -->
                     <div class="button" role="group" aria-label="Main actions">
                        
-                        <a href="/contact.html" aria-label="Go to contact page">
+                        <a href="contact.html" aria-label="Go to contact page">
                             <button type="button">Contact Me</button>
                         </a>
                     </div>
