--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="sidebar">
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="intro.html">My Intro</a></li>
          
         
